--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ bleach==3.1.0
 colorama==0.4.1
 decorator==4.4.0
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.0.2
+django-heroku==0.3.1
 entrypoints==0.3
 gunicorn==20.0.4
 importlib-metadata==0.23
